--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<html><head> <title>═┴╢╣</title> 
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312"></head>
-<body  text=#FF0000  bgcolor=#FFFFFF>
-<h1>─у║├гб</h1>
-<h2>─у║├гб</h2>
-<h3>─у║├гб</h3>
-<h4>─у║├гб</h4>
-<h5>─у║├гб</h5>
-
-</body> </html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>хЬЯш▒Ж</title>
+</head>
+<h1>ф╜ахе╜я╝Б</h1>
+<h2>ф╜ахе╜я╝Б</h2>
+<h3>ф╜ахе╜я╝Б</h3>
+<h4>ф╜ахе╜я╝Б</h4>
+<h5>ф╜ахе╜я╝Б</h5>
+<body>
+</body>
+</html>
